fixed login page, and paypal buttons on mobile

--- a/client/components/Footer.css
+++ b/client/components/Footer.css
@@ -8,6 +8,7 @@
     bottom: 0;
     width: 100%;
     margin-top: 20px;
+    padding-top: 5px;
 }
 
 .footer-text {
